GNOME Bugzilla – Bug 662011
shell-recorder-src: Statically init mutexes instead of using the deprecated API
Last modified: 2011-10-18 20:36:20 UTC
see patch.
Created attachment 199222 [details] [review] shell-recorder-src: Statically init mutexes instead of using the deprecated API
Created attachment 199223 [details] [review] Drop deprecated g_thread_init call GThread will automatically initialize at program start now.
Review of attachment 199222 [details] [review]: Just store the pointer instead of having &src->mutex all over the place.
Review of attachment 199223 [details] [review]: Looks good.
des# Bug 662011 - shell-recorder-src: Statically init mutexes instead of using the deprecated API - NEW Attachment 199222 [details] pushed as 338ba10 - shell-recorder-src: Statically init mutexes instead of using the deprecated API Attachment 199223 [details] pushed as 4bb48e5 - Drop deprecated g_thread_init call