shell-recorder-src: Statically init mutexes instead of using the deprecated API

https://bugzilla.gnome.org/show_bug.cgi?id=662011